k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octoops-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: octoops-backend
  template:
    metadata:
      labels:
        app: octoops-backend
    spec:
      containers:
      - name: backend
        image: 657399551937.dkr.ecr.ap-south-1.amazonaws.com/octoops-backend:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: octoops-backend-service
spec:
  selector:
    app: octoops-backend
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
