k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octoops-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # Backend API
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: octoops-backend-service
            port:
              number: 3000
      # Frontend
      - path: /
        pathType: Prefix
        backend:
          service:
            name: octoops-frontend-service
            port:
              number: 80
